kubernetes/zero.vsense.fr/test-bind-path-file.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: nginx
        name: nginx
    spec:
      terminationGracePeriodSeconds: 60
      volumes:
        - name: test1
          hostPath:
            path: /srv/configs/test/test1.json
        - name: test2
          hostPath:
            path: /srv/configs/test/test2.json
      containers:
        - image: vsense/nginx
          name: nginx
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: "/etc/crontabs/test1.json"
              name: "test1"
          volumeMounts:
            - mountPath: "/test/test2.json"
              name: "test2"
          ports:
            - containerPort: 80
            - containerPort: 443
