kubernetes/zero.vsense.fr/nginx.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      name: nginx-80
    - port: 443
      name: nginx-443
  externalIPs:
    - 178.32.28.59
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext:
        fsGroup: 5001
      containers:
        - name: nginx
          image: "vsense/nginx:latest"
          ports:
            - containerPort: 80
              name: nginx-80
            - containerPort: 443
              name: nginx-443
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx
      volumes:
        - name: nginx-config
          hostPath:
            path: /srv/configs/nginx
