kubernetes/zero.vsense.fr/plex.yml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
spec:
  selector:
    app: plex
  ports:
    - port: 32400
      protocol: TCP
      name: plex-32400-tcp
    - port: 32400
      protocol: UDP
      name: plex-32400-udp
    - port: 32469
      protocol: TCP
      name: plex-32469-tcp
    - port: 32469
      protocol: UDP
      name: plex-32469-udp
    - port: 5353
      protocol: UDP
      name: plex-5353-udp
    - port: 1900
      protocol: UDP
      name: plex-1900-udp
  externalIPs:
    - 178.32.28.59
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: plex
  labels:
    app: plex
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: plex
    spec:
      securityContext:
        fsGroup: 5001
      containers:
        - name: plex
          lifecycle:
            preStop:
              exec:
                command:
                  - "rm"
                  - "/config/Plex Media Server/plexmediaserver.pid"
          image: "linuxserver/plex"
          ports:
            - containerPort: 32400
              protocol: TCP
            - containerPort: 32400
              protocol: UDP
            - containerPort: 32469
              protocol: TCP
            - containerPort: 32469
              protocol: UDP
            - containerPort: 5353
              protocol: UDP
            - containerPort: 1900
              protocol: UDP
          volumeMounts:
            - name: plex-config
              mountPath: "/config/Library/Application Support"
            - name: plex-library
              mountPath: /library
      volumes:
        - name: plex-config
          hostPath:
            path: /srv/configs/plex
        - name: plex-library
          hostPath:
            path: /srv/seedbox
