kubernetes/zero.vsense.fr/kube-dashboard-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kube-system
  name: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: kubernetes.archifleks.net
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 80
