kubernetes/zero.vsense.fr/rtorrent.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rtorrent
  labels:
    app: rtorrent
spec:
  selector:
    app: rtorrent
  ports:
    - port: 6881
      protocol: TCP
      name: tcp-6881
    - port: 6881
      protocol: UDP
      name: udp-6881
    - port: 51413
      protocol: TCP
      name: tcp-51413
    - port: 51413
      protocol: UDP
      name: udp-51413
  externalIPs:
    - 178.32.28.59
---
apiVersion: v1
kind: Service
metadata:
  name: rtorrent-internal
  labels:
    app: rtorrent
spec:
  selector:
    app: rtorrent
  ports:
    - port: 80
      name: rtorrent-80
    - port: 5000
      name: rtorrent-5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: torrents
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: torrents.archifleks.net
      http:
        paths:
          - backend:
              serviceName: rtorrent-internal
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rtorrent
  labels:
    app: rtorrent
spec:
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: rtorrent
    spec:
      securityContext:
        fsGroup: 5001
      containers:
        - name: rtorrent
          image: "vsense/rtorrent:latest"
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command:
                  - "rm"
                  - "/downloads/sessions/rtorrent.lock"
          ports:
            - containerPort: 80
            - containerPort: 5000
            - containerPort: 6881
            - containerPort: 51413
          volumeMounts:
            - name: rutorrent-config
              mountPath: /rutorrent
            - name: rtorrent-downloads
              mountPath: /downloads
      volumes:
        - name: rutorrent-config
          hostPath:
            path: /srv/configs/rutorrent
        - name: rtorrent-downloads
          hostPath:
            path: /srv/seedbox
