kubernetes/zero.vsense.fr/sickrage.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sickrage
  labels:
    app: sickrage
spec:
  type: NodePort
  selector:
    app: sickrage
  ports:
    - port: 8081
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sickrage
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: tv.archifleks.net
      http:
        paths:
          - backend:
              serviceName: sickrage
              servicePort: 8081
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sickrage
  labels:
    app: sickrage
spec:
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: sickrage
    spec:
      securityContext:
        fsGroup: 5001
      containers:
        - name: sickrage
          image: "linuxserver/sickrage"
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
